implementacion api para subir imagenes al blob de azure

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
 			<artifactId>azure-resourcemanager-botservice</artifactId>
 			<version>1.0.0-beta.5</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.microsoft.azure</groupId>
+			<artifactId>azure-storage</artifactId>
+			<version>8.6.6</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
